--- a/local.yml
+++ b/local.yml
@@ -4,7 +4,7 @@ volumes:
   local_postgres_data: {}
 
 services:
-  django:
+  django: &django
     build:
       context: .
       dockerfile: ./compose/local/django/Dockerfile
@@ -19,7 +19,9 @@ services:
       - ./.envs/.local/.postgres
     ports:
       - "8000:8000"
+      - "5678:5678"
     command: /start
+    #command: /start_debug
 
   postgres:
     image: postgres:12.6
@@ -28,3 +30,37 @@ services:
       - local_postgres_data:/var/lib/postgresql/data:Z
     env_file:
       - ./.envs/.local/.postgres
+
+  redis:
+    image: redis:5.0
+    container_name: redis
+
+  celeryworker:
+    <<: *django
+    image: scheduler_local_celeryworker
+    container_name: celeryworker
+    depends_on:
+      - redis
+      - postgres
+
+    ports: []
+    command: /start-celeryworker
+
+  celerybeat:
+    <<: *django
+    image: scheduler_local_celerybeat
+    container_name: celerybeat
+    depends_on:
+      - redis
+      - postgres
+
+    ports: []
+    command: /start-celerybeat
+
+  flower:
+    <<: *django
+    image: scheduler_local_flower
+    container_name: flower
+    ports:
+      - "5555:5555"
+    command: /start-flower
