add: read me & clean-up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "python.formatting.provider": "black",
   "python.pythonPath": "venv/bin/python",
-  "restructuredtext.confPath": ""
+  "restructuredtext.confPath": "",
+  "python.linting.pylintArgs": [
+    //"--disable=django-not-configured",
+    "--django-settings-module=config.settings.local"
+  ]
 }
